--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,29 @@
 .Header {
     width: 100%;
-    height: 90px;
+    height: 70px;
+    padding: 20px 0 0 20px;
     position: fixed;
     top: 0;
     z-index: 100;
     background-color: #fff;
     box-shadow: 0 2px 24px hsla(0,0%,6%,.2);
+}
+
+.Logo {
+    float: left;
+}
+
+.Navbar {
+    float: right;
+}
+
+.Navbar a {
+    margin-right: 40px;
+    text-decoration: none;
+    cursor: pointer;
+    color: #000;
+}
+
+.Navbar a:hover {
+    color: goldenrod;
 }
